<resources>
    <string name="app_name">چک کیت</string>
    <string name="app_name_english">Checkit</string>
    <string name="login_title">به چک کیت خوش آمدید</string>
    <string name="login_msg">لطفا برای ذخیره آزمایش ها شماره موبایل خود را وارد کنید
        <br></br>
        هیچگونه پیامکی برای شما ارسال نخواهد شد
    </string>
    <string name="phone_number">شماره موبایل</string>
    <string name="login_in_app">ورود به برنامه</string>
    <string name="rules"> <u>قوانین و مقررات</u> را خوانده و موافقم</string>
    <string name="example_phone">مثلا 09123456789</string>
    <string name="network_error">اینترنت شما وصل نیست</string>
    <string name="error_msg">لطفا وضعیت اتصال به اینترنت را بررسی کنید و
        <br></br>
        مجددا تلاش کنید</string>
    <string name="add_new_check">افزودن آزمایش جدید</string>
    <string name="last_experiments">آخرین آزمایش ها</string>
    <string name="see_all">مشاهده همه</string>
    <string name="choose_photo">انتخاب عکس</string>
    <string name="camera">دوربین</string>
    <string name="gallery">گالری</string>
    <string name="help">راهنما</string>
    <string name="about_us">درباره ما</string>
    <string name="detail_new_experiment">جزئیات آزمایش جدید</string>
    <string name="experiment_picture">عکس آزمایش</string>
    <string name="title">عنوان</string>
    <string name="hint_age_description">سن صاحب برگه آزمایش را وارد کنید</string>
    <string name="age">سن</string>
    <string name="type">نوع آزمایش</string>
    <string name="scan">اسکن</string>
    <string name="hint_title">یک عنوان برای ازمایش خود وارد کنید (اختیاری)</string>
    <string name="please_wait">لطفا صبر کنید</string>
    <string name="description_wait">اسکن تصویر مدتی طول میکشد لظفا منتظر بمانید
        </string>
    <string name="scaning">در حال اسکن ...</string>
    <string name="version">version</string>


    <string name="intro_title1">از برگه آزمایش عکس بگیرید</string>
    <string name="intro_description1">ابتدا از برگه آزمایش عکس گرفته و یا از گالری انتخاب نمایید.</string>

    <string name="intro_title2">اسکن برگه آزمایش</string>
    <string name="intro_description2">حالا صبر کنید عکس برگه آزمایش اسکن بشه!</string>

    <string name="intro_title3">نمایش نتیجه</string>
    <string name="intro_description3">در اخر میتونی تحلیل آزمایشت رو دریافت کنی :)</string>


    <string name="next">بعدی</string>
    <string name="continue_txt">ادامه</string>
    <string name="using_flash">استفاده از چراغ فلش</string>
    <string name="gotit">فهمیدم</string>
    <string name="no">خیر</string>
    <string name="yes">بله</string>

    <string name="review_desc">
        در این مرحله لطفا تک تک مقادیر داخل برگه آزمایش را با مقادیر اسکن شده
        بررسی کنید و مطابقت دهید و در صورتی که مقادیر با هم مطابقت نداشتند
        شما میتوانید مقادیر درست را جایگزین کنید.
        در صورت مغایرت ممکن است تحلیل اشتباهی دریافت کنید


    </string>


    <string name="lorem">
        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیستری را برای طراحان رایانه ای و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد. لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتا


    </string>
    <string name="review_variable">بررسی درستی مقادیر</string>
    <string name="contact_us">تماس با ما</string>
    <string name="help_title">راهنمای چک کیت</string>
    <string name="help_1">
        وقتی که وارد اپ شدید دکمه "افزودن آزمایش جدید" بزنید. حالا انتخاب کنید که تصویر رو از گالری انتخاب کنید یا اینکه از طریق دوربین همون موقع از برگه آزمایش عکس بگیرید.
        دقت کنید که هنگام گرفتن عکس بهتره از چراغ فلش استفاده کنید تا مقادیر داخل برگه آزمایش راحت تر و دقیق تر اسکن بشن. پیشنهاد میشه که عکسی که میگیرید مثل نمونه زیر باشه:


    </string>

    <string name="help_2">
        حالا در صفحه "جزئیات آزمایش جدید" یک عنوان برای آزمایش خود انتخاب کنید. در بخش سن هم سن فرد صاحب آزمایش رو وارد کنید. در آخر هم نوع آزمایش رو انتخاب کنید و بعدش دکمه اسکن رو بزنید.
حالا مدتی صبر کنید که تصویر شما اسکن بشه. اسکن مدتی طول میکشه و تا حدی هم به سرعت اینترنت شما بستگی داره.

حالا به بخش مهم بررسی درستی مقادیر میرسیم. در این بخش شما باید مقادیر اسکن شده رو با مقادیر داخل برگه آزمایش مطابقت بدید چون که اگر مقداری متفاوت باشد احتمالا تحلیل درستی دریافت نکنید. بعد از چک کردن درستی مقادیر دکمه مشاهده تحلیل را بزنید.

در نهایت شما تحلیل آزمایش رو دریافت میکنید به اشتراک بذارید.

حالا وقتی که به صفحه اصلی برگردید میتونید تاریخچه ی آزمایش های خودتون که ذخیره شده را مشاهده کنید.

    </string>
</resources>