<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingEnd="20dp"
    android:paddingStart="20dp"
    android:layoutDirection="rtl"
    tools:context=".activity.GuideActivity">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/topBar"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/icon_close"/>

        <ir.Peaky.checkit.utils.BoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:textColor="@color/title_color" />

    </RelativeLayout>

    <ScrollView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topBar">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <ir.Peaky.checkit.utils.RegularTextView
                android:lineSpacingExtra="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/title_color"
                android:layout_centerHorizontal="true"
                android:textAlignment="textStart"
                android:id="@+id/text_help_1"
                android:text="@string/help_1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:background="@drawable/sample_img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/text_help_1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/img"/>


            <ir.Peaky.checkit.utils.RegularTextView
                android:lineSpacingExtra="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/title_color"
                android:layout_below="@id/img"
                android:layout_centerHorizontal="true"
                android:textAlignment="textStart"
                android:layout_marginTop="30dp"
                android:id="@+id/text_help_2"
                android:text="@string/help_2"
                android:layout_marginBottom="10dp"/>



        </RelativeLayout>
    </ScrollView>




</RelativeLayout>