<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:padding="10dp"
    android:id="@+id/bottom_sheet"
    android:background="@drawable/bottom_sheet_background">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="100dp"
        android:layout_height="2.5dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_background"
        android:layout_marginBottom="6dp">


    </LinearLayout>




    <ir.Peaky.checkit.utils.BoldTextView
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/title_color"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/choose_photo"/>

    <LinearLayout
        android:id="@+id/lin_camera"
        android:layout_marginTop="10dp"
        android:paddingStart="15dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera_icon"
                android:layout_centerVertical="true"
                android:id="@+id/icon_camera"/>

            <ir.Peaky.checkit.utils.RegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/camera"
                android:textColor="@color/title_color"
                android:layout_toEndOf="@id/icon_camera"
                android:layout_marginStart="15dp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>



    </LinearLayout>
    <LinearLayout
        android:id="@+id/lin_gallery"
        android:paddingStart="15dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_gallery"
                android:layout_centerVertical="true"
                android:id="@+id/icon_galery"/>

            <ir.Peaky.checkit.utils.RegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/gallery"
                android:textColor="@color/title_color"
                android:layout_toEndOf="@id/icon_galery"
                android:layout_marginStart="15dp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>