<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:id="@+id/drawer"
    android:layoutDirection="rtl">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/topBar"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:id="@+id/icon_menu"/>

            <ir.Peaky.checkit.utils.BoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/icon_menu"
                android:textColor="@color/title_color"
                android:layout_marginStart="35dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_above="@id/rel_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rel_main"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera"
                android:layout_centerInParent="true"
                android:id="@+id/icon_camera"/>

            <ir.Peaky.checkit.utils.BoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main"
                android:text="@string/add_new_check"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_below="@id/icon_camera"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="13dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginStart="20dp"
            android:visibility="gone"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/rel_bottom"
            android:layout_marginEnd="20dp">

            <RelativeLayout
                android:id="@+id/rel_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ir.Peaky.checkit.utils.BoldTextView
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_experiments"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/title_color"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_left"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/arrow_left"
                    android:layout_centerVertical="true"/>

                <ir.Peaky.checkit.utils.RegularTextView
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/arrow_left"
                    android:text="@string/see_all"
                    android:textColor="@color/green"
                    android:textSize="14sp"/>



            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/rel_up"
                android:layout_marginTop="10dp">

            </androidx.recyclerview.widget.RecyclerView>




        </RelativeLayout>




    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:itemTextColor="@color/title_color"
        app:menu="@menu/main_menu" >


        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ir.Peaky.checkit.utils.RegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt"
                android:textSize="16sp"

                android:layout_alignParentBottom="true"
                android:text=" ورژن : "
                android:textColor="@color/title_color"/>

            <ir.Peaky.checkit.utils.RegularTextView
                android:textColor="@color/title_color"
                android:id="@+id/txt_version_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:layout_alignParentBottom="true"
                android:textSize="16sp"
                android:layout_toEndOf="@id/txt"
                />

        </RelativeLayout>

    </com.google.android.material.navigation.NavigationView>




</androidx.drawerlayout.widget.DrawerLayout>